Added a CSS cache buster.

--- a/demo/index.html
+++ b/demo/index.html
@@ -7,7 +7,7 @@
     <meta name="author" content="Andreas Larsson">
     <meta name="description" content="reMorse converts text into Morse code.">
     <title>reMorse demo</title>
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/main.css?beersonthewall=487568347658743">
     <script src="../js/reMorse.min.js"></script>
 </head>
 <body>
